--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-API_KEY=AIzaSyCnSn6Q5_hx7WmlV7McmvBuWSMthfZSpMo
-AUTH_DOMAIN=joblancer-52413.firebaseapp.com
-PROJECT_ID=joblancer-52413
-STORAGE_BUCKET= joblancer-52413.appspot.com
-MESSAGING_SENDER_ID=571467276964
-APP_ID=1:571467276964:web:f48d0c8cd86104d87b7c31
+REACT_APP_API_KEY = AIzaSyCnSn6Q5_hx7WmlV7McmvBuWSMthfZSpMo
+REACT_APP_AUTH_DOMAIN = joblancer-52413.firebaseapp.com
+REACT_APP_PROJECT_ID =j oblancer-52413
+REACT_APP_STORAGE_BUCKET = joblancer-52413.appspot.com
+REACT_APP_MESSAGING_SENDER_ID = 571467276964
+REACT_APP_APP_ID = 1:571467276964:web:f48d0c8cd86104d87b7c31
